@@ -3065,9 +3065,9 @@ completer_table[] = {
   { 0x0, 0x0, 117, 1177, -1, 0, 1, 0 },
   { 0x0, 0x0, 117, 1178, -1, 0, 1, 0 },
   { 0x3, 0x3, 117, 1136, -1, 34, 1, 34 },
-  { 0x3, 0x3, 117, 1137, -1, 34, 1, 41 },
+  { 0x3, 0x3, 117, 1137, -1, 34, 1, 34 },
   { 0x1, 0x1, 119, -1, -1, 35, 1, 34 },
-  { 0x1, 0x1, 119, -1, -1, 35, 1, 41 },
+  { 0x1, 0x1, 119, -1, -1, 35, 1, 34 },
   { 0x0, 0x0, 120, -1, -1, 0, 1, 41 },
   { 0x0, 0x0, 120, -1, -1, 0, 1, 67 },
   { 0x1, 0x1, 120, -1, -1, 36, 1, 129 },
@@ -3110,7 +3110,7 @@ completer_table[] = {
   { 0x1, 0x1, 126, -1, -1, 29, 1, 0 },
   { 0x1, 0x1, 126, -1, -1, 29, 1, 0 },
   { 0x0, 0x0, 126, 1134, -1, 0, 1, 34 },
-  { 0x0, 0x0, 126, 1262, -1, 0, 1, 41 },
+  { 0x0, 0x0, 126, 1262, -1, 0, 1, 34 },
   { 0x0, 0x0, 140, 1212, 2886, 0, 1, 1 },
   { 0x0, 0x0, 140, 1213, 2888, 0, 1, 1 },
   { 0x0, 0x0, 140, 1054, 304, 0, 0, -1 },
@@ -3192,7 +3192,7 @@ completer_table[] = {
   { 0x0, 0x0, 147, -1, 2952, 0, 1, 1 },
   { 0x0, 0x0, 147, -1, 2953, 0, 1, 1 },
   { 0x0, 0x0, 148, -1, -1, 0, 1, 34 },
-  { 0x0, 0x0, 148, 1135, -1, 0, 1, 41 },
+  { 0x0, 0x0, 148, 1135, -1, 0, 1, 34 },
   { 0x0, 0x0, 149, -1, -1, 0, 1, 41 },
   { 0x0, 0x0, 149, -1, -1, 0, 1, 67 },
   { 0x0, 0x0, 149, -1, 2960, 0, 1, 64 },
